Add vshare and episodes editor